# eee4464-esp32

./: .gitignore  .port  CMakeLists.txt  LICENSE  README.md  makefile
cloudflare_api/: CMakeLists.txt  cloudflare_api.c  cloudflare_api.h
components/dht/: CMakeLists.txt  dht.c
components/dht/include/: dht.h
logs/: BOM_Board1_Schematic1_2025-06-10_1.xlsx
logs/plantuml/: 1.ESP32 Sensor Hub Architecture.txt  2.Main Execution Flow.txt  3.Sensor acquistition and pump control.png.txt  4.HTTP Request Processing.txt  Data Path and User Interaction Flow.txt  esp32_flow.txt  system_architecture.txt  uno_flow.txt
main/: CMakeLists.txt  UART_test.c  hello_world_main.c  main.c  main.h  mqtt_utils.c  mqtt_utils.h
report/: task1_summary.md  task1_summary_en.md  task2_analysis.md  task2_analysis_en.md  task3_history.md  task3_history_en.md
sub_device/IR_control/: IR_control.ino
sub_device/decoded_IR_Data/: decoded_IR_Data.ino
sub_device/eee4464-uno/: eee4464-uno.ino
sub_device/uno_UART_test/: spo2_algorithm.h  uno_UART_test.ino
tests/: CMakeLists.txt  test_http_queue.c
